# k-k

./: .env.example  .gitignore  ARCHITECTURE_AUDIT.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  FINAL_K-K_SOLUTION.md  GIT_PUSH_NOW.md  K-K_PUSH_GUIDE.md  LICENSE  LOCAL_SETUP.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PRODUCTION_AUDIT_REPORT.md  PUSH_INSTRUCTIONS.md  PUSH_TO_GITHUB.md  PUSH_TO_K-K_25.md  QUICK_START_LOCAL.md  README.md  README_Python.md  README_STREAMLIT.md  SECURITY_AND_OBSERVABILITY_COMPLETE.md  STREAMLIT_DEPLOYMENT.md  kokogretim-bundle.git  main.py  package-lock.json  package.json  pyproject.toml  replit.md  run_streamlit.py  start_python.py  start_streamlit.sh  streamlit_app.py  streamlit_simple.py  switch-auth.bat  switch-auth.sh  test_python.py  test_streamlit.py
_archive/: README.md
app/: __init__.py  analytics.py  auth.py  database.py  models.py
attached_assets/: Pasted-AtaMind-AI-Powered-Turkish-Children-s-Education-Platform-AtaMind-Logo-An-intelligent-voice-educa-1754499891331_1754499891331.txt  Pasted-K-k-reti-AI-Powered-Turkish-Children-s-Education-Platform-K-k-reti-Logo-An-intelligent-voice-e-1754501834390_1754501834391.txt  Pasted-Role-You-are-a-senior-Agentic-AI-architect-and-reliability-engineer-My-project-already-works-local-1762353534126_1762353534127.txt  Pasted-Role-You-are-a-senior-Agentic-AI-architect-reliability-engineer-My-project-already-works-locally--1762459138622_1762459138623.txt  premium_photo-1682095261811-676fc6d0ad80_1754493978735.avif  (+1 more)
kokogretim-temp.git/: config  packed-refs
server/: gemini.ts  (+6 more)
(+45 files in other folders)
